# super-memory

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml  vps.md
.github/: dependabot.yml  pull_request_template.md
.venv_test/: pyvenv.cfg
SKILLS/: README.md  auto-deep.md  basic-usage.md  cross-agent.md  lifecycle.md  onboarding.md  quality-ingest.md  recall-arbitration.md  self-improve.md  super-memory-deep-operations.md
alembic/: env.py
data/: .gitkeep
deploy/: super-memory.service
docs/: ARCHITECTURE.md  COMPARISON_NEURAL_MEMORY.md  CROSS_AGENT_SESSION_MEMORY_IMPROVEMENT_PROPOSAL.md  CROSS_AGENT_SESSION_MEMORY_OPTIMIZATION_REVIEW.md  CROSS_AGENT_SESSION_MEMORY_SETUP.md  DESIGN_DECISIONS.md  LAYERS_TOOLS_CONNECTIONS_REPORT.md  MCP_SERVER.md  MEMORY_SLOT_REPLACEMENT.md  MEMPALACE_HONCHO_COMPARISON.md  NEURAL_MEMORY_LAYER_ROADMAP.md  NEURAL_MEMORY_OPENCLAW_LESSONS.md  OPENCLAW_INTEGRATION.md  OPENCLAW_PLUGIN_INSTALL.md  OPENCLAW_SLOT_ADAPTER.md  OPENCLAW_WORKSPACE_TEMPLATES.md  OPERATIONS.md  PHASES_2_4.md  PHASE_5_SANDBOX_BACKTEST.md  PHASE_6_COGNITIVE_ORCHESTRATION.md  PLUGIN_WRAPPER.md  REFERENCE_LINEAGE.md  RESEARCH_NOTES.md  RESEARCH_SUMMARY.md  SPREADING_ACTIVATION_BENCHMARK.json  TOOL_CATALOG.json  TOOL_CATALOG.md  V2_MIGRATION_PLAN.md  live-runtime-operations-2026-07-17.md  recommended-cron-jobs.md  roadmap.md  semantic-mode.md  super-memory-deep-technical-review-2026-06-16.md  technical-overview.md  (+1 more)
openclaw-plugin/: index.js
(+450 files in other folders)
