[project]
name = "super-memory"
version = "2.3.0"
description = "Local multi-layer memory app for OpenClaw multi-agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "structlog>=26.1",
  "numpy>=1.26",
  "cryptography>=43.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28", "ruff>=0.8", "hypothesis>=6.0", "detect-secrets>=1.5", "alembic>=1.13"]
extract = ["PyPDF2>=3.0", "python-docx>=1.1", "python-pptx>=0.6", "beautifulsoup4>=4.12", "openpyxl>=3.1"]
semantic = ["sqlite-vec>=0.1.6"]

[project.scripts]
super-memory = "super_memory.cli:app"
super-memory-api = "super_memory.api:main"
super-memory-mcp = "super_memory.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
